feat(#S11P12D109-307):멀티파트 추가